tests/semantic_errors/sasha81_4.tl
-- test case 81.
-- Description : for cycles, minus in the assignment

-- Expected : '4'
require "ifj21" 
function main(iterations : string )      
    for i=0, -iterations, -1 do          
    end                                  
end                                      
main("helloo")                         

